{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Move",
            "id": "960b7bfb-f465-42ff-952f-b22518ba94a8",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "83ab2e88-c01e-4a53-a388-fd5039e38c29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sliding",
                    "type": "Button",
                    "id": "5c2958a4-91b5-4cd4-9cd0-fe2619d92f1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5193df6-1222-4a25-aae5-ce62c3eee82b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2336c0c2-1a7c-4363-9a66-bbbae640432d",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sliding",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}